--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
 			<h2> I'm an aspiring web developer, living north of Atlanta, GA.<br>Thanks for stopping by!</h2>
 		</section>
 
-		<div class="Hero">
-			<img src="imgs/hero.jpeg" alt="Hero"/>
+		<div>
+			<img class="profilePic" src="imgs/hero.jpeg" alt="Hero"/>
 		</div>
 
 		<section class="content">
@@ -57,7 +57,7 @@
 		<section class="cta">
 			<div>
 				<h5>So, how can I help you?</h5>
-					<a class=emailButton href="mailto:scotluman@icloud.com">Email Me <span class="arrow-right">&#8594;</span></a>
+					<a class=emailButton href="mailto:scotluman@icloud.com">Email Me <span>&#8594;</span></a>
 			</div>
 			<br>
 		</section>
