--- a/play.html
+++ b/play.html
@@ -8,6 +8,7 @@
   <title>1-T Tech | Play</title>
 	<link rel="stylesheet" href="css/main.css?v=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/9f97dd3163.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,6 +24,20 @@
 	</header>
 
 	<main>
+		<div class="playGallery">
+			<div class="item">
+				<h2>Games</h2>
+				<i class="fas fa-dice fa-10x"></i>
+			</div>
+			<div class="item">
+				<h2>Reading</h2>
+				<i class="fas fa-book-reader fa-10x"></i>
+			</div>
+			<div class="item">
+				<h2>Music</h2>
+				<i class="fas fa-guitar fa-10x"></i>
+			</div>
+		</div>
 	</main>
 
 </body>
