--- a/work.html
+++ b/work.html
@@ -20,9 +20,49 @@
 			<a class="active" href="work.html"> Work </a>
 			<a href="play.html"> Play </a>
 		</nav>
+		<div class="title">
+		<h1>My Previous Work</h1><br><br>
+	</div>
 	</header>
+	
+	<main class="content">
 
-	<main>
+		<div class="sample">
+			<h2>Little Way Messengers</h2>
+			<p>Little Way Messengers is a non-profit organization who needed a refreshed website that better conveyed their mission. My role in this project included content structure, design, copy-writing, and launch. With a big vision and a limited budget, the best solution was to utilize a pre-built template and customize the content and CSS to ensure that the site looked fresh and original.</p>
+			<iframe src="http://littlewaymessengers.org/"></iframe>
+			<a href="http://littlewaymessengers.org/" target="blank" style="float: right">View Full Site &#8594;</a><br>
+		</div>
+
+		<div class="sample">
+			<h2>North Metro Church</h2>
+			<p>North Metro is a thriving community in Kennesaw Georgia that needed a website that could grow alongside them and have a user-friendly backend that would allow the staff and volunteers to easily create their own content while maintaining the site's continuity. My role in this project included photo selection, copy-writing, template QA, user backend training, and launch.</p>
+			<br>
+			<iframe src="https://www.northmetro.org/online"></iframe>
+			<a href="https://www.northmetro.org/online" target="blank" style="float: right">View Full Site &#8594;</a><br>
+		</div>
+
+		<div class="sample">
+			<h2>Cliff's Fire Extinguihser Company</h2>
+			<p>Cliff's is a local fire safety business that has been a staple in Georgia since the 80's. With the onslaught of national companies entering the Atlanta Area, Cliff's wanted to get a fresh and functional website which would allow customers to find them and get a quote quickly while maintaining the mom and pop feel that makes this company great. This was a breakout project for me in that I carried out all aspects of creation and launch.</p>
+			<br>
+			<iframe src="https://caper-clover-tjkj.squarespace.com"></iframe>
+			<a href="https://caper-clover-tjkj.squarespace.com" target="blank" style="float: right">View Full Site &#8594;</a><br>
+		</div>
+
 	</main>
+	
+	<section class="cta">
+		<div>
+			<h5>So, how can I help you?</h5>
+				<a class=emailButton href="mailto:scotluman@icloud.com">Email Me <span class="arrow-right">&#8594;</span></a>
+		</div>
+		<br>
+		</section>
+	<hr>
+	
+	<footer>
+	<h6>&copy; Scot Luman 2020</h6>
+	</footer>
 
 </body>
