Fixed first iframe

--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
 		<div class="sample">
 			<h2>Little Way Messengers</h2>
 			<p>Little Way Messengers is a non-profit organization who needed a refreshed website that better conveyed their mission. My role in this project included content structure, design, copy-writing, and launch. With a big vision and a limited budget, the best solution was to utilize a pre-built template and customize the content and CSS to ensure that the site looked fresh and original.</p>
-			<iframe src="http://littlewaymessengers.org/"></iframe>
+			<iframe src="https://littlewaymessengers.org/"></iframe>
 			<a href="http://littlewaymessengers.org/" target="blank" style="float: right">View Full Site &#8594;</a><br>
 		</div>
 
