Finalizing flexbox on "Play" page

--- a/play.html
+++ b/play.html
@@ -21,6 +21,9 @@
 			<a href="work.html"> Work </a>
 			<a class="active" href="play.html"> Play </a>
 		</nav>
+		<div class="title">
+		<h1>Hobbies &amp; Interests</h1><br><br>
+	</div>
 	</header>
 
 	<main>
@@ -32,7 +35,7 @@
 				<img class="itemPic" src="imgs/game.jpg" alt="Boardgame set up in floor.">
 				<p>I think my favorite part of this hobby is opening up people's eyes to new types of games! I love to get to know what someone likes and curate a table-top experience just for them. So many people's scope of table-top games is limited to what you find at the local big box store like Monopoly, Checkers, and Uno, but that is <span class="emph">the tip, of the TIP,</span> of the iceberg!</p>
 				<br><br>
-				<a href="https://boardgamegeek.com/collection/user/ScoticusMaximus?objecttype=thing&ff=1&subtype=boardgame" target="blank">My Games<span> &#8594;</span></a>
+				<a href="https://boardgamegeek.com/collection/user/ScoticusMaximus?objecttype=thing&ff=1&subtype=boardgame" target="blank">My Games<span> &#8594;</span></a><hr>
 			</div>
 
 			<div class="item">
@@ -42,7 +45,7 @@
 				<img class="itemPic" src="imgs/music.jpg" alt="Scot playing Banjo,">
 				<p> I've never really tried to make a job of my music for fear that it would negatively effect my passion for it but I like to share it with others because I want to inspire them and, let's face it, <span class="emph">because I like the attention! </span>But still, my favorite way to enjoy music is to sit at my keyboard and just sing, no notes, no lyrics, no plan. Just let whatever is going on inside of me come out and fill the room I am in. This type of freeform inproptu playing and singing has become my confession booth, my therapist, my priest, and closest confidant. </p>
 				<br><br>
-				<a href="https://www.youtube.com/user/scotluman/videos?view=0&sort=dd&shelf_id=0" target="blank">My Music<span> &#8594;</span></a>
+				<a href="https://www.youtube.com/user/scotluman/videos?view=0&sort=dd&shelf_id=0" target="blank">My Music<span> &#8594;</span></a><hr>
 			</div>
 
 			<div class="item">
@@ -52,9 +55,21 @@
 				<img class="itemPic" src="imgs/bookhaul.jpg" alt="Various books laid out in grid.">
 				<p> In many ways reading and games provide the same opportunity for me; a momentary escape from my world which allows me to engage in the adventures of another world! Also, I like inviting other people to become readers and helping them find content they will be passionate about and get lost in.</p>
 				<br><br>
-				<a href="https://www.goodreads.com/user/show/10598656-scot" target="blank">My Books<span> &#8594;</span></a>
+				<a href="https://www.goodreads.com/user/show/10598656-scot" target="blank">My Books<span> &#8594;</span></a><hr>
 			</div>
 		</div>
 	</main>
-
+	<hr>
+	<section class="cta">
+		<div>
+			<h5>So, how can I help you?</h5>
+				<a class=emailButton href="mailto:scotluman@icloud.com">Email Me <span class="arrow-right">&#8594;</span></a>
+		</div>
+		<br>
+	</section>
+	<hr>
+	
+	<footer>
+	<h6>&copy; Scot Luman 2020</h6>
+	</footer>
 </body>
